# CMAKE_APP

./: CMakeLists.txt  CMakeSettings.json  README.md  _result_tempo_estimation.txt
CrestMuseProcessor/: CMakeLists.txt  CrestMuse.cpp  CrestMuse.h  _crestmuseTest.cpp  _crestmuseTest.h  pch.h
DTW/: CMakeLists.txt  DynamicTimeWarping.cpp  DynamicTimeWarping.h  _dtwTest.cpp  _dtwTest.h  pch.h
Evaluation/: CMakeLists.txt  _evaluationTest.cpp  _evaluationTest.h  evaluationSystem.cpp  evaluationSystem.h  pch.h
MIDIModules/: Binasc.cpp  Binasc.h  CMakeLists.txt  MIDIProcessor.cpp  MIDIProcessor.h  MIDISharedFunctions.cpp  MIDISharedFunctions.h  MidiEvent.cpp  MidiEvent.h  MidiEventList.cpp  MidiEventList.h  MidiFile.cpp  MidiFile.h  MidiMessage.cpp  MidiMessage.h  Options.cpp  Options.h  _midiTest.cpp  _midiTest.h  pch.h
MusicPreciseAnalysis/: CMakeLists.txt  MusicPreciseAnalysis.cpp  MusicPreciseAnalysis.h  _musicPreciseAnalysisTest.cpp  _musicPreciseAnalysisTest.h  pch.h
ParticleFilter/: CMakeLists.txt  ParticleFilter.cpp  ParticleFilter.h  ParticleFilterPDF.cpp  ParticleFilterPDF.h  ParticleFilterShared.cpp  ParticleFilterShared.h  _particleFilterTest.cpp  _particleFilterTest.h  pch.h
ProbabilityFunctions/: CMakeLists.txt  GenRandomNumber.cpp  GenRandomNumber.h  ProbabilityFunctions.cpp  ProbabilityFunctions.h  _probabilityFunctionsTest.cpp  _probabilityFunctionsTest.h  pch.h
PythonMadmom/: CMakeLists.txt  Madmom.cpp  Madmom.h  _madmomTest.cpp  _madmomTest.h  pch.h  pyMadmom.py
ScoreFollowing/: CMakeLists.txt  ScoreFollowing.cpp  ScoreFollowing.h  _ScoreFollowing_not_use_func.cpp  _scoreFollowingTest.cpp  _scoreFollowingTest.h  pch.h
Shared/: CMakeLists.txt  ConstantParams.cpp  ConstantParams.h  Constants.cpp  Constants.h  DataProc.cpp  DataProc.h  MathProc.cpp  MathProc.h  _address.txt  _moduleTest.cpp  _moduleTest.h  genToyData.cpp  genToyData.h  matplotlibCpp.cpp  matplotlibCpp.h  matplotlibPython.py  passPyCpp.cpp  passPyCpp.h  pch.h  python_code_sample.py  vec_op.h
TempoEstimation/: CMakeLists.txt  TempoEstimation.cpp  TempoEstimation.h  _tempoEstimationTest.cpp  _tempoEstimationTest.h  pch.h
_CreateTemplate/: CMakeLists.txt  CreateTemplate.cpp  CreateTemplate.h  _createTemplateTest.cpp  _createTemplateTest.h  pch.h
_CreateTest/: CMakeLists.txt  CreateTest.cpp  CreateTest.h  _createTestTest.cpp  _createTestTest.h  pch.h
_Execution/: exeTest.cpp
_Template/: CMakeLists.txt  _Test.cpp  _Test.h  _cls.cpp  _cls.h  _makePythonShow.cpp
